--- a/app/src/main/res/layout/show_activity.xml
+++ b/app/src/main/res/layout/show_activity.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="de.mario222k.kotlintv.ShowsActivity">
+    android:background="#ccc"
+    tools:context="de.mario222k.kotlintv.shows.ShowsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
