--- a/app/src/main/res/menu/menu_shows.xml
+++ b/app/src/main/res/menu/menu_shows.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="de.mario222k.kotlintv.ShowsActivity">
+      tools:context="de.mario222k.kotlintv.shows.ShowsActivity">
     <item
         android:id="@+id/action_refresh"
         android:orderInCategory="100"
