--- a/app/src/main/res/layout/show_item.xml
+++ b/app/src/main/res/layout/show_item.xml
@@ -12,7 +12,7 @@
                                     app:contentPadding="5dp"
                                     tools:context=".shows.ShowsActivity">
 
-    <android.support.constraint.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -20,35 +20,24 @@
             android:id="@+id/cover"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="10dp"
             tools:src="@color/colorPrimary"/>
-        
-        <android.support.constraint.Guideline
-            android:id="@+id/guide_cover"
-            android:layout_width="10dp"
-            android:layout_height="match_parent"
-            app:layout_constraintLeft_toRightOf="@id/cover"
-            />
 
         <TextView
             android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintLeft_toRightOf="@id/guide_cover"
-            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginBottom="10dp"
+            android:layout_toEndOf="@id/cover"
             tools:text="The Big Bang"/>
 
         <TextView
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintLeft_toRightOf="@id/cover"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            android:layout_below="@id/title"
+            android:layout_toEndOf="@id/cover"
             tools:text="Description"/>
-
-    </android.support.constraint.ConstraintLayout>
-
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
