--- a/app/src/main/res/layout/show_item.xml
+++ b/app/src/main/res/layout/show_item.xml
@@ -20,24 +20,41 @@
             android:id="@+id/cover"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginEnd="10dp"
             tools:src="@color/colorPrimary"/>
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:layout_toEndOf="@id/cover"
-            tools:text="The Big Bang"/>
+            android:layout_marginStart="10dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/title"
-            android:layout_toEndOf="@id/cover"
-            tools:text="Description"/>
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:textStyle="bold"
+                tools:text="The Big Bang"/>
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="Description"/>
+
+            <TextView
+                android:id="@+id/runtime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:drawablePadding="10dp"
+                android:drawableStart="@android:drawable/ic_lock_idle_alarm"
+                android:gravity="end"
+                android:textSize="12sp"
+                tools:text="45min"/>
+
+        </LinearLayout>
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
