--- a/app/src/main/res/layout/show_item.xml
+++ b/app/src/main/res/layout/show_item.xml
@@ -41,6 +41,9 @@
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minHeight="40dp"
+                android:maxLines="4"
+                android:ellipsize="end"
                 tools:text="Description"/>
 
             <TextView
