--- a/app/src/main/res/layout/show_item.xml
+++ b/app/src/main/res/layout/show_item.xml
@@ -42,8 +42,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="40dp"
-                android:maxLines="4"
-                android:ellipsize="end"
+                android:maxLines="8"
+                android:layout_marginBottom="10dp"
                 tools:text="Description"/>
 
             <TextView
